--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
@@ -25,7 +24,7 @@ body{
 
 
 .panel{
-    background-size: auto 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 80vh;
